--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
