--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.4.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
