--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dmFsaWQtbGFyay0yOS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_rGj5ZnqCwDQ0Oy9an6raOnzsnBAZhjAvKiGmc2jDbi
+MONGODB_URI='mongodb+srv://liambsulliva:zGt0J3MQNBp4Y1Ds@auth.x8k4kqg.mongodb.net/?retryWrites=true&w=majority&appName=auth'
