--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.6",
+    "@next/font": "^14.2.4",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
