semicolons shouldve been there all along

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"semi": true,
+	"singleQuote": true,
+	"useTabs": true,
+	"printWidth": 80,
+	"tabWidth": 2,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
