--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"mongodb": "^6.7.0",
 		"mongoose": "^8.4.3",
 		"next": "14.2.3",
+		"node-cache": "^5.1.2",
 		"node-fetch": "^3.3.2",
 		"react": "^18",
 		"react-dom": "^18"
@@ -33,6 +34,7 @@
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.2.5",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"postcss": "^8.4.38",
