--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-usememo-recommendations": "^1.0.2",
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
