--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "npm run lint && next build",
 		"start": "next start",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^5.1.6",
@@ -24,12 +25,14 @@
 		"react-dom": "^18"
 	},
 	"devDependencies": {
+		"@testing-library/react": "^16.0.0",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^7.16.0",
 		"@typescript-eslint/parser": "^7.16.0",
+		"@vitejs/plugin-react": "^4.3.1",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.2.5",
@@ -38,10 +41,12 @@
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-usememo-recommendations": "^1.0.2",
+		"jsdom": "^24.1.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.4.4",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vitest": "^2.0.2"
 	}
 }
