--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.10.8",
 		"@clerk/nextjs": "^5.1.6",
 		"axios": "^1.7.2",
 		"dotenv": "^16.4.5",
 		"flowbite": "^2.3.0",
 		"flowbite-react": "^0.9.0",
+		"graphql": "^16.9.0",
+		"graphql-tag": "^2.12.6",
 		"lodash.debounce": "^4.0.8",
 		"mongodb": "^6.7.0",
 		"mongoose": "^8.4.3",
